all-concepts-in/stateful-mongo-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: mongo-service
  selector:
    matchLabels:
      app: mongo 
  replicas: 1
  template: 
    metadata: 
      labels:  
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.4-focal
        # envFrom:
        # - secretRef:
        #     name: mongo-secret
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-init-volume
          mountPath: /docker-entrypoint-initdb.d   # for injecting the intial data
        - name: mongo-storage
          mountPath: /data/db   # for permanent storage via pvc
      volumes:
      - name: mongo-init-volume
        configMap:
         name: mongo-init
  volumeClaimTemplates:   # for pvc
  - metadata: 
      name: mongo-storage
    spec: 
      storageClassName: standard  #this is default available in local kind cluster
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2G         
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  clusterIP: None  # for making headless service
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
