all-concepts-in/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /candidate
        pathType: Prefix
        backend:
          service:
            name: candidate-service
            port:
              number: 8080
      - path: /job
        pathType: Prefix
        backend:
          service:
            name: job-service
            port:
              number: 8080
      - path: /      
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
